@@ -65,6 +65,7 @@ Changelog
  * Fix: Move focus to the pages explorer menu when open (Helen Chapman)
  * Fix: Clicking the privacy toggle while the page is still loading no longer loads the wrong data in the page (Helen Chapman)
  * Fix: Added missing `is_stored_locally` method to `AbstractDocument` (jonny5532)
+ * Fix: Query model no longer removes punctuation as part of string normalisation (William Blackie)
 
 
 2.5.1 (07.05.2019)
